tests/should_fail/logic_alias/missing_trait_impl.stderr
error: Cannot use #[logic_alias] in this context, because type S2 does not implement trait IsZeroLog.
  --> missing_trait_impl.rs:23:5
   |
23 |     #[logic_alias(S1::is_zero_logic(S1(v)))]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> missing_trait_impl.rs:24:5
   |
24 |     fn is_zero_prog(v: i64) -> bool {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: logic function defined here
  --> missing_trait_impl.rs:12:5
   |
12 |     fn is_zero_logic(self) -> bool;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `logic_alias` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

